[project]
name = "docuchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.29.0",
    "pypdf>=6.9.1",
    "streamlit>=1.55.0",
    "supabase>=2.28.2",
]
